# dravr-embache

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md
.claude/: settings.json
.claude/agents/: error-handling-guardian.md
.claude/skills/check-error-handling/: SKILL.md
.claude/skills/create-worktree/: SKILL.md  create-worktree.sh
.claude/skills/finish-worktree/: SKILL.md  finish-worktree.sh  merge-and-cleanup.sh
.claude/skills/strict-clippy-check/: SKILL.md
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
crates/embacle-copilot-sdk/: Cargo.toml  README.md
crates/embacle-mcp/: Cargo.toml  README.md
crates/embacle-mcp/src/: main.rs  protocol.rs  server.rs  state.rs
crates/embacle-mcp/src/runner/: mod.rs  (+2 more)
crates/embacle-server/: Cargo.toml  README.md
crates/embacle-server/src/: auth.rs  completions.rs  health.rs  lib.rs  main.rs  models.rs  openai_types.rs  provider_resolver.rs  router.rs  state.rs  streaming.rs
examples/: test_claude_e2e.rs
scripts/: pre-push-validate.sh
scripts/ci/: pre-push-validate.sh
src/: agent.rs  auth.rs  cache.rs  capability_guard.rs  claude_code.rs  cli_common.rs  cline_cli.rs  codex_cli.rs  compat.rs  config.rs  config_file.rs  container.rs  continue_cli.rs  copilot.rs  copilot_headless.rs  copilot_headless_config.rs  copilot_sdk_config.rs  copilot_sdk_runner.rs  cursor_agent.rs  discovery.rs  factory.rs  fallback.rs  gemini_cli.rs  goose_cli.rs  kiro_cli.rs  lib.rs  mcp_tool_bridge.rs  metrics.rs  openai_api.rs  opencode.rs  process.rs  prompt.rs  quality_gate.rs  sandbox.rs  stream.rs  structured_output.rs  tool_bridge.rs  tool_simulation.rs  types.rs  warp_cli.rs
tests/: e2e.rs
(+12 files in other folders)
